--- a/init/Kconfig
+++ b/init/Kconfig
@@ -145,6 +145,14 @@ config BUILD_SALT
           This is mostly useful for distributions which want to ensure the
           build is unique between builds. It's safe to leave the default.
 
+config LOCALVERSION_SHA
+	bool "Leave only current tree"
+	default y
+	depends on LOCALVERSION_AUTO
+	depends on !COMPILE_TEST
+	help
+	  A cleaner version of LOCALVERSION_AUTO, contains current tree.
+
 config HAVE_KERNEL_GZIP
 	bool
 
