--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -58,8 +58,8 @@ KBUILD_AFLAGS	+= $(lseinstr) $(brokengasinst) $(compat_vdso)
 KBUILD_CFLAGS	+= $(call cc-option,-mabi=lp64)
 KBUILD_AFLAGS	+= $(call cc-option,-mabi=lp64)
 
-KBUILD_CFLAGS   += -mcpu=cortex-a55+crypto+crc+dotprod+rcpc
-KBUILD_AFLAGS   += -mcpu=cortex-a55+crypto+crc+dotprod+rcpc
+KBUILD_CFLAGS   += -mcpu=cortex-a55+crypto+crc+dotprod+rcpc -march=armv8.2-a+lse+crypto+dotprod
+KBUILD_AFLAGS   += -mcpu=cortex-a55+crypto+crc+dotprod+rcpc -march=armv8.2-a+lse+crypto+dotprod
 KBUILD_LDFLAGS  += -mllvm -mcpu=cortex-a55
 
 ifeq ($(CONFIG_SHADOW_CALL_STACK), y)
