ARM64: boot: dts: samsung: Update entries for the new touchscreen driver
Change-Id: I6b8507f75ffab7148836f2b0c84a2bdc2ce4cecb

--- a/arch/arm64/boot/dts/samsung/drivers/kona-sec-gts7xl-input-pinctrl.dtsi
+++ b/arch/arm64/boot/dts/samsung/drivers/kona-sec-gts7xl-input-pinctrl.dtsi
@@ -23,6 +23,18 @@
 		};
 	};
 
+	attn_input: attn_input {
+		mux {
+			pins = "gpio15";
+			function = "gpio";
+		};
+		config {
+			pins = "gpio15";
+			input-enable;
+			bias-pull-down;
+		};
+	};
+
 	/* SE 5 pin mappings */
 	qupv3_se5_tsp_i2c_pins: qupv3_se5_tsp_i2c_pins {
 		qupv3_se5_tsp_i2c_active: qupv3_se5_tsp_i2c_active {
