drivers: kernelsu: Rewrite kernel version code detection
kernel: refactor CMD_GET_FULL_VERSION to safely initialize version string

kernel: Update CMD_GET_FULL_VERSION to a new constant value

kernel: Bump KSU_VERSION_API to 3.1.9

Gives proper sukisu support without breaking other managers support

--- a/drivers/kernelsu/Makefile
+++ b/drivers/kernelsu/Makefile
@@ -16,9 +16,17 @@ ccflags-y += -I$(objtree)/security/selinux -include $(srctree)/include/uapi/asm-
 
 obj-$(CONFIG_KSU) += kernelsu.o
 
-$(eval KSU_VERSION=13337)
-$(info -- KernelSU-Next version: $(KSU_VERSION))
+REPO_NAME := KrenlolSU-Next
+
+KSU_VERSION := 14327
+KSU_VERSION_API := 3.1.9
+KSU_VERSION_FULL := v$(KSU_VERSION_API)-$(REPO_NAME)-skye@pa1n
+
+$(info -- KrenlolSU-Next version: $(KSU_VERSION))
+$(info -- KrenlolSU-Next FULL version: $(KSU_VERSION_FULL))
+
 ccflags-y += -DKSU_VERSION=$(KSU_VERSION)
+ccflags-y += -DKSU_VERSION_FULL=\"$(KSU_VERSION_FULL)\"
 
 ifeq ($(shell grep -q " current_sid(void)" $(srctree)/security/selinux/include/objsec.h; echo $$?),0)
 ccflags-y += -DKSU_COMPAT_HAS_CURRENT_SID
@@ -50,11 +58,7 @@ endif
 
 ifdef KSU_MANAGER_PACKAGE
 ccflags-y += -DKSU_MANAGER_PACKAGE=\"$(KSU_MANAGER_PACKAGE)\"
-$(info -- KernelSU-Next Manager package name: $(KSU_MANAGER_PACKAGE))
 endif
-
-$(info -- KernelSU-Next Manager signature size: $(KSU_NEXT_EXPECTED_SIZE))
-$(info -- KernelSU-Next Manager signature hash: $(KSU_NEXT_EXPECTED_HASH))
 
 ccflags-y += -DEXPECTED_NEXT_SIZE=$(KSU_NEXT_EXPECTED_SIZE)
 ccflags-y += -DEXPECTED_NEXT_HASH=\"$(KSU_NEXT_EXPECTED_HASH)\"
