--- a/drivers/input/touchscreen/stm/fts1ba90a/Kconfig
+++ b/drivers/input/touchscreen/stm/fts1ba90a/Kconfig
@@ -2,7 +2,7 @@
 # STMicroelectronics TOUCH driver configuration
 #
 
-config TOUCHSCREEN_FTS1BA90A
+config TOUCHSCREEN_STM_FTS1BA90A
 	tristate "STMicroelectronics i2c multitouch touchscreen with FingerTipS"
 	depends on I2C
 	help
