--- a/arch/arm64/boot/dts/samsung/drivers/nfc_f2q_r00.dtsi
+++ b/arch/arm64/boot/dts/samsung/drivers/nfc_f2q_r00.dtsi
@@ -91,7 +91,9 @@
 	pinctrl-2 = <&qupv3_se16_spi_lpm>;
 	status = "ok";
 	sec,pinctrl_active;
+	secnfc,pinctrl_active;
 	sec,pinctrl_skip_sleep;
+	secnfc,pinctrl_skip_sleep;
 	ese_spi@0 {
 		compatible = "p61";
 		reg = <0>;
@@ -114,9 +116,10 @@
 		pn547,ven-gpio = <&tlmm 8 0>;
 		pn547,firm-gpio = <&expander_gpios 7 0>;
 		pn547,clk_req-gpio = <&tlmm 7 0>;
-		pn547,nfc_pvdd-supply = <&pm8150a_l1>;
+		nfc_pvdd-supply = <&pm8150a_l1>;
 		pn547,ldo_control;
 		pn547,clk_req_wake;
+		pn547,ap_vendor = "qct";
 /*		pn547,nfc_pm_clk; */ /* don't need to control bbclk3 by driver code, if MGPI is enabled */
 /*		clocks = <&clock_rpmh RPMH_LN_BB_CLK3>; */
 /*		clock-names = "rf_clk"; */
