--- a/drivers/input/touchscreen/novatek/nt36523/Kconfig
+++ b/drivers/input/touchscreen/novatek/nt36523/Kconfig
@@ -1,8 +1,9 @@
 #
 # Novatek NT36xxx touchscreen driver configuration
 #
-config TOUCHSCREEN_NOVATEK_NT36523
-	bool "Novatek NT36523"
+
+config TOUCHSCREEN_NOVATEK_NT36523_TABLET_I2C
+	tristate "Novatek NT36523"
 	depends on I2C
 	help
 	  Say Y here if you have a Novatek NT36523 touchscreen connected
