--- a/drivers/net/wireless/qualcomm/qca6390/qcacld-3.0/Kbuild
+++ b/drivers/net/wireless/qualcomm/qca6390/qcacld-3.0/Kbuild
@@ -3017,7 +3017,7 @@ cppflags-$(CONFIG_WLAN_HANG_EVENT) += -DHIF_BUS_LOG_INFO
 cppflags-$(CONFIG_WLAN_HANG_EVENT) += -DDP_SUPPORT_RECOVERY_NOTIFY
 #endof dummy flags
 
-ccflags-y += -Os
+ccflags-y += -O2
 ccflags-y += -g0
 
 # DFS component
